# feecc-analytics-backend

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-dev-k8s.yml  deploy-main-k8s.yml  deploy-master-k8s.yml  python-ci.yml  release.yml
config/: config.yaml
modules/: cacher.py  database.py  exceptions.py  models.py  security.py  singleton.py  types.py  utils.py
modules/dependencies/: filters.py  handlers.py  security.py
modules/routers/: __init__.py  employees.py  external_ops.py  passports.py  quality_control.py  schemas.py  service.py  stages.py  users.py
modules/routers/employees/: models.py  router.py
modules/routers/passports/: models.py  router.py
modules/routers/schemas/: models.py  router.py
modules/routers/service/: models.py  router.py
modules/routers/stages/: models.py  router.py
modules/routers/tcd/: models.py  router.py
modules/routers/users/: models.py  router.py
tests/: __init__.py  test_employees.py  test_main.py  test_passports.py  test_schemas.py  test_stages.py  test_users.py
