[tool.poetry]
name = "feecc-analytics-backend"
version = "0.1.0"
description = ""
authors = ["Nikolas <timofeevnik41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
motor = "^2.5.1"
uvicorn = "^0.15.0"
loguru = "^0.5.3"
dnspython = "^2.1.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
