[tool.poetry]
name = "feecc-analytics-backend"
version = "0.1.0"
description = ""
authors = ["Nikolas <timofeevnik41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
motor = "^2.5.1"
uvicorn = "^0.15.0"
loguru = "^0.5.3"
dnspython = "^2.1.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.19.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"
black = "^21.10b0"
mypy = "^0.910"
types-PyYAML = "^6.0.1"
pytest = "^6.2.5"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "test*"
strict = true
ignore_missing_imports  = true
allow_untyped_decorators = true
warn_incomplete_stub = false

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as resource intesive (deselect with '-m \"not slow\"')",
]
